--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "LoshiYah-Ex-V1",
   "description": "Javascript WhatsApp bot made by LoshiYah'Ex",
-  "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
+  "logo": "https://files.catbox.moe/pgvev9.jpeg",
   "keywords": ["bot"],
   "success_url": "/",
 
